addressing pitest complains